--- a/wk06/실습html/hm06_card.html
+++ b/wk06/실습html/hm06_card.html
@@ -16,12 +16,12 @@ animation-name : bomb;
 animation-duration : 3s;
 animation-iteration-count : infinite;
 }
-div
+body
 {
     background-image: url("media/teduri.jpg");
-  background-size: 500px 500px;
+  background-size: 300px 300px;
   background-repeat: no-repeat;
-  background-position: left center;
+  background-position: -1cm 2cm;
   
 }
 
