--- a/hm06_rpt02/hm06_rpt2.html
+++ b/hm06_rpt02/hm06_rpt2.html
@@ -70,7 +70,9 @@
           <h2>크리스마스</h2>
           <ul>
             <li>
-              <a href="hm06_card.html" target="myframe">hm06 크리스마스트리</a>
+              <a href="hm06_card.html" target="myframe"
+                >크리스마스 파티 초대장!!</a
+              >
             </li>
           </ul>
         </li>
