--- a/hm06_rpt02/hm06_card.html
+++ b/hm06_rpt02/hm06_card.html
@@ -103,7 +103,12 @@ width="70" height="60" alt="장식">
         <p style="left: 100px; top: 150px;">A</p>
         <p style="left: 120px; top: 170px;">S</p>
       </div><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-      <div id="absolute">hm06 20192578 박종혁</div>
+      <div id="absolute">2019년 5월 11일 크리스마스 파티에 초대합니다^^<br>
+        <h4>장소:</h4> 인제대학교 장열실관 323호<br>
+      <h4>시간:</h4>2019년 5월 11일 13:00<br>
+      <h4>준비물:</h4> 몸만 챙겨서 오세요^^
+      </div>
+    
       <div>
         <audio id = "music" audio src="media/캐롤.mp3"
         width = "200" height = "240"
