--- a/hm06_rpt03/나의하루.html
+++ b/hm06_rpt03/나의하루.html
@@ -140,14 +140,14 @@
           Github로 이동
         </h1>
         <nav id="menu">
-          <li><a href="rpt03_.html">Home</a></li>
+         <li><a href="rpt03_.html">Home</a></li>
            <li><a href="나의하루.html">My Daily</a></li>
            <li><a href="여행가고싶은곳.html">My Best 3</a></li>
            <li><a href="동호회 소개.html">FootBall Club</a></li>
            <li><a href="hm06_tree.html">Christmas</a></li>
-           <li><a href="코로나.html">코로나 관련</a></li>
-           <li><a href="시계.html">시계</a></li>
-           <li><a href="나의위치.html">실시간 현재 위치</a></li>
+           <li><a href="코로나.html">About Corona</a></li>
+           <li><a href="시계.html">Clock</a></li>
+           <li><a href="나의위치.html">My GPS</a></li>
         </nav>
       </div>
     </header>
