Update and rename rpt03_.html to hm06_rpt03.html

--- a/hm06_rpt03/hm06_rpt03.html
+++ b/hm06_rpt03/hm06_rpt03.html
@@ -43,7 +43,7 @@
       <div id="wrapper">
         <h1><a href="https://github.com/Park-Jong-Hyeok">HM06 박종혁 </a>☜클릭시 Github로 이동</h1>
         <nav id="menu">
-           <li><a href="rpt03_.html">Home</a></li>
+           <li><a href="hm06_rpt03.html">Home</a></li>
            <li><a href="나의하루.html">My Daily</a></li>
            <li><a href="여행가고싶은곳.html">My Best 3</a></li>
            <li><a href="동호회 소개.html">FootBall Club</a></li>
